<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Activity_User"
    android:paddingTop="14dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8dp"
        android:text="@string/find_password_send_email_prompt"
        android:textColor="#b8bebf"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/message_prompt"
        android:textColor="#2ca9e3"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:text="@string/find_password_failure_prompt"
        android:textColor="#2ca9e3"
        android:textSize="14sp" />
</LinearLayout>
